--- a/login/src/main/res/layout/dialog_agreement.xml
+++ b/login/src/main/res/layout/dialog_agreement.xml
@@ -12,6 +12,7 @@
         android:id="@+id/agreement_checkbox_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         app:agreement_links="@array/agreement_links"
         app:agreement_text="@string/login_agreement_dialog"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:layout_marginTop="28dp"
+        android:background="@color/white"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/agreement_checkbox_view">
 
