--- a/login/src/main/res/layout/dialog_agreement.xml
+++ b/login/src/main/res/layout/dialog_agreement.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/dialog_bg"
+    android:background="@drawable/agreement_dialog_bg"
     android:orientation="vertical"
     android:padding="24dp">
 
@@ -31,12 +31,12 @@
         <!--不同意按钮-->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_disagree"
-            style="@style/center_bold_16"
             android:layout_width="0dp"
             android:layout_height="44dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1"
             android:background="@drawable/dialog_negative_btn"
+            android:gravity="center"
             android:text="@string/disagree"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent" />
@@ -44,11 +44,11 @@
         <!--同意按钮-->
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_agree"
-            style="@style/center_bold_16"
             android:layout_width="0dp"
             android:layout_height="44dp"
             android:layout_weight="1"
             android:background="@drawable/dialog_positive_btn"
+            android:gravity="center"
             android:text="@string/agree"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
