feat: 验证码登录页面

--- a/login/src/main/res/layout/activity_login_by_one_key.xml
+++ b/login/src/main/res/layout/activity_login_by_one_key.xml
@@ -41,7 +41,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center"
-            android:src="@mipmap/ic_launcher_round" />
+            android:src="@mipmap/ic_launcher" />
 
         <!--手机号-->
         <androidx.appcompat.widget.AppCompatTextView
