--- a/login/src/main/res/layout/activity_login_by_pwd_popup.xml
+++ b/login/src/main/res/layout/activity_login_by_pwd_popup.xml
@@ -115,7 +115,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="26dp"
                 app:agreement_links="@array/agreement_links"
-                app:agreement_text="@string/login_agreement"
+                app:agreement_text="@string/login_by_pwd_agreement"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_login"
