--- a/login/src/main/res/layout/activity_login_by_sms_code.xml
+++ b/login/src/main/res/layout/activity_login_by_sms_code.xml
@@ -19,13 +19,14 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="62dp"
         android:layout_marginEnd="24dp"
         android:layout_weight="1"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,29 +36,25 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/black_bold_26"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/login_by_pwd"
+                android:text="@string/login_by_sms_code"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <!--验证码登录-->
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/tv_login_by_sms"
+                android:id="@+id/tv_login_by_pwd"
                 style="@style/center_bold_16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="4dp"
                 android:paddingBottom="4dp"
-                android:text="@string/login_by_sms_code"
+                android:text="@string/login_by_pwd"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -74,22 +71,18 @@
             app:icon_size="34dp"
             app:icon_src="@drawable/ic_clear"
             app:icon_visibility="false"
-            app:input_hint="@string/login_phone_input_hint"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layout_title" />
+            app:input_hint="@string/login_phone_input_hint" />
 
 
-        <!--密码-->
-        <com.yzq.login.widget.InputPwdView
-            android:id="@+id/input_pwd"
+        <com.yzq.login.widget.InputWithSmsView
+            android:id="@+id/input_sms_code"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:layout_marginTop="10dp"
-            app:input_hint="@string/login_password_input_hint"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/input_phone" />
-
+            android:layout_marginTop="20dp"
+            app:input_hint="验证码"
+            app:sms_button_text="@string/get_sms_code"
+            app:sms_button_text_color="@color/secondary_text"
+            app:sms_button_text_size="12dp" />
 
         <!--登录按钮-->
         <androidx.appcompat.widget.AppCompatButton
@@ -100,8 +93,7 @@
             android:layout_marginTop="48dp"
             android:background="@drawable/btn_selector"
             android:enabled="false"
-            android:text="@string/login"
-            app:layout_constraintTop_toBottomOf="@+id/input_pwd" />
+            android:text="@string/login" />
 
 
         <!--隐私协议-->
@@ -111,28 +103,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="26dp"
             app:agreement_links="@array/agreement_links"
-            app:agreement_text="@string/login_by_pwd_agreement"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_login"
+            app:agreement_text="@string/login_by_sms_code_agreement"
             app:show_check="true" />
 
 
-        <!--忘记密码-->
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tv_forget_pwd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="35dp"
-            android:gravity="center"
-            android:text="@string/retrieve_pwd"
-            android:textColor="@color/secondary_text"
-            android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
