--- a/login/src/main/res/values/themes.xml
+++ b/login/src/main/res/values/themes.xml
@@ -43,9 +43,9 @@
     <style name="TransparentTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:windowIsFloating">false</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:backgroundDimEnabled">false</item>
+        <!--        <item name="android:windowIsFloating">false</item>-->
+        <!--        <item name="android:windowNoTitle">true</item>-->
+        <!--        <item name="android:backgroundDimEnabled">false</item>-->
     </style>
 
 </resources>
