--- a/login/src/main/res/values/themes.xml
+++ b/login/src/main/res/values/themes.xml
@@ -42,7 +42,7 @@
     <!--透明主题-->
     <style name="TransparentTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:windowIsTranslucent">true</item>
-        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowBackground">@color/popup_color_50</item>
         <!--        <item name="android:windowIsFloating">false</item>-->
         <!--        <item name="android:windowNoTitle">true</item>-->
         <!--        <item name="android:backgroundDimEnabled">false</item>-->
