--- a/login/src/main/res/layout/activity_login_by_pwd_popup.xml
+++ b/login/src/main/res/layout/activity_login_by_pwd_popup.xml
@@ -4,13 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!--忘记密码-->
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/bottom_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/tv_forget_pwd"
+
+        app:layout_constraintBottom_toTopOf="@+id/agreement_checkbox"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent">
 
         <com.yzq.login.widget.PopupHeaderView
@@ -76,32 +79,34 @@
                 android:textColor="@color/white" />
 
 
-            <!--隐私协议-->
-            <com.yzq.login.widget.AgreementCheckboxView
-                android:id="@+id/agreement_checkbox"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="26dp"
-                app:agreement_links="@array/agreement_links"
-                app:agreement_text="@string/login_by_pwd_agreement"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/btn_login"
-                app:show_check="true" />
-
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <!--忘记密码-->
+    <!--隐私协议-->
+    <com.yzq.login.widget.AgreementCheckboxView
+        android:id="@+id/agreement_checkbox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
+        app:agreement_links="@array/agreement_links"
+        app:agreement_text="@string/login_by_pwd_agreement"
+        app:layout_constraintBottom_toTopOf="@+id/tv_forget_pwd"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:show_check="true" />
+
+
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tv_forget_pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:gravity="center"
-        android:paddingTop="40dp"
+        android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:text="@string/forget_pwd"
         android:textColor="@color/secondary_text"
