--- a/widget/src/main/res/layout/view_input_custom_end.xml
+++ b/widget/src/main/res/layout/view_input_custom_end.xml
@@ -14,7 +14,6 @@
         android:background="@null"
         android:gravity="center_vertical"
         android:lines="1"
-        android:textAppearance="?android:textAppearanceMedium"
         android:textColor="@color/black"
         android:textColorHint="@color/gray_600"
         android:textCursorDrawable="@drawable/input_cursor"
@@ -37,7 +36,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/primary_icon"
+        android:background="@color/gray_400"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
