--- a/app/src/main/res/layout/item_task_content.xml
+++ b/app/src/main/res/layout/item_task_content.xml
@@ -13,6 +13,6 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:padding="@dimen/dp_10"
-        android:textColor="@color/primary_text" />
+        android:textColor="@color/text_primary" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
