--- a/app/src/main/res/layout/activity_blue_tooth.xml
+++ b/app/src/main/res/layout/activity_blue_tooth.xml
@@ -28,7 +28,7 @@
                 android:layout_height="@dimen/dp_46"
                 android:padding="@dimen/dp_10"
                 android:text="已配对设备"
-                android:textColor="@color/primary_text" />
+                android:textColor="@color/text_primary" />
 
 
             <androidx.recyclerview.widget.RecyclerView
@@ -57,7 +57,7 @@
                     android:gravity="center_vertical"
 
                     android:text="可用设备"
-                    android:textColor="@color/primary_text" />
+                    android:textColor="@color/text_primary" />
 
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -65,7 +65,7 @@
                     android:layout_width="@dimen/dp_24"
                     android:layout_height="match_parent"
                     android:src="@drawable/icon_refresh"
-                    android:tint="@color/secondary_icon"
+                    android:tint="@color/icon_secondary"
                     android:visibility="gone" />
 
 
@@ -76,7 +76,7 @@
                     android:indeterminate="false"
                     android:scrollIndicators="top"
                     android:visibility="gone"
-                    app:indicatorColor="@color/colorOnPrimary" />
+                    app:indicatorColor="@color/color_primary" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
