--- a/app/src/main/res/layout/appbar_main.xml
+++ b/app/src/main/res/layout/appbar_main.xml
@@ -23,7 +23,7 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-            app:statusBarScrim="@color/trans"
+            app:statusBarScrim="@color/transparent"
             app:toolbarId="@id/toolbar">
 
             <androidx.appcompat.widget.AppCompatImageView
