--- a/app/src/main/res/layout/layout_empty.xml
+++ b/app/src/main/res/layout/layout_empty.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_20"
         android:text="@string/no_data"
-        android:textColor="@color/secondary_text"
+        android:textColor="@color/text_secondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
