--- a/login/src/main/res/drawable/dialog_negative_btn.xml
+++ b/login/src/main/res/drawable/dialog_negative_btn.xml
@@ -3,7 +3,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/secondary_text" />
+        android:color="@color/text_secondary" />
     <corners
         android:bottomLeftRadius="6dp"
         android:bottomRightRadius="6dp"
