--- a/login/src/main/res/drawable/sms_btn_selector.xml
+++ b/login/src/main/res/drawable/sms_btn_selector.xml
@@ -13,7 +13,7 @@
     <!-- 可用状态 -->
     <item android:color="@color/white" android:state_enabled="true">
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="@color/colorOnPrimary" />
+            <stroke android:width="1dp" android:color="@color/color_primary" />
             <solid android:color="@color/white" />
             <corners android:radius="4dp" />
         </shape>
