--- a/login/src/main/res/layout/activity_exempt_login_popup.xml
+++ b/login/src/main/res/layout/activity_exempt_login_popup.xml
@@ -69,7 +69,7 @@
                     android:background="@drawable/sms_btn_selector"
                     android:gravity="center"
                     android:text="@string/change_phone"
-                    android:textColor="@color/colorOnPrimary"
+                    android:textColor="@color/color_primary"
                     android:textSize="12sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_phone"
