--- a/login/src/main/res/layout/activity_login_by_pwd_popup.xml
+++ b/login/src/main/res/layout/activity_login_by_pwd_popup.xml
@@ -109,7 +109,7 @@
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         android:text="@string/forget_pwd"
-        android:textColor="@color/secondary_text"
+        android:textColor="@color/text_secondary"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
