--- a/login/src/main/res/layout/activity_set_new_pwd.xml
+++ b/login/src/main/res/layout/activity_set_new_pwd.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:text="为167****设置新的登录密码"
-            android:textColor="@color/colorOnPrimary"
+            android:textColor="@color/color_primary"
             android:textSize="16sp" />
 
 
