--- a/login/src/main/res/layout/view_popup_header.xml
+++ b/login/src/main/res/layout/view_popup_header.xml
@@ -13,7 +13,7 @@
         android:paddingStart="16dp"
         android:paddingEnd="6dp"
         android:src="@drawable/ic_back"
-        android:tint="@color/primary_icon"
+        android:tint="@color/icon_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         android:layout_height="match_parent"
         android:padding="18dp"
         android:src="@drawable/ic_close"
-        android:tint="@color/primary_icon"
+        android:tint="@color/icon_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
