--- a/widget/src/main/res/drawable/linear_gradient_color.xml
+++ b/widget/src/main/res/drawable/linear_gradient_color.xml
@@ -2,7 +2,7 @@
     android:shape="rectangle">
     <gradient
         android:angle="45"
-        android:endColor="@color/colorPrimary"
-        android:startColor="@color/colorAccent"
+        android:endColor="@color/color_primary"
+        android:startColor="@color/color_primary_light"
         android:type="linear" />
 </shape>
