--- a/widget/src/main/res/layout/layout_state_view.xml
+++ b/widget/src/main/res/layout/layout_state_view.xml
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_16"
             android:gravity="center"
-            android:textColor="@color/primary_text"
+            android:textColor="@color/text_primary"
             android:textSize="@dimen/sp_18" />
 
         <com.google.android.material.button.MaterialButton
