--- a/widget/src/main/res/layout/view_horizontal_edit_layout.xml
+++ b/widget/src/main/res/layout/view_horizontal_edit_layout.xml
@@ -12,7 +12,7 @@
         android:layout_width="@dimen/dp_20"
         android:layout_height="@dimen/dp_20"
         android:scaleType="centerCrop"
-        android:tint="@color/primary_icon"
+        android:tint="@color/icon_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,7 +25,7 @@
         android:layout_marginStart="@dimen/dp_10"
         android:gravity="center_vertical"
         android:minWidth="@dimen/dp_100"
-        android:textColor="@color/primary_text"
+        android:textColor="@color/text_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/icon_start"
         app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +39,7 @@
         android:background="@null"
         android:paddingStart="@dimen/dp_10"
         android:paddingEnd="@dimen/dp_0"
-        android:textColor="@color/secondary_text"
+        android:textColor="@color/text_secondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/icon_end"
         app:layout_constraintStart_toEndOf="@id/tv_title"
@@ -50,7 +50,7 @@
         android:layout_width="@dimen/dp_20"
         android:layout_height="@dimen/dp_20"
         android:scaleType="centerCrop"
-        android:tint="@color/primary_icon"
+        android:tint="@color/icon_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
