--- a/widget/src/main/res/layout/view_horizontal_text_layout.xml
+++ b/widget/src/main/res/layout/view_horizontal_text_layout.xml
@@ -24,7 +24,7 @@
         android:layout_marginStart="@dimen/dp_10"
         android:gravity="center_vertical"
         android:minWidth="@dimen/dp_100"
-        android:textColor="@color/primary_text"
+        android:textColor="@color/text_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/icon_start"
         app:layout_constraintTop_toTopOf="parent"
@@ -38,7 +38,7 @@
         android:gravity="end|center_vertical"
         android:paddingStart="@dimen/dp_10"
         android:paddingEnd="@dimen/dp_0"
-        android:textColor="@color/secondary_text"
+        android:textColor="@color/text_secondary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/icon_end"
         app:layout_constraintStart_toEndOf="@id/tv_title"
