update:data 模块抽取

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="login"
-            type="com.yzq.common.data.LoginBean" />
+            type="com.yzq.data.LoginBean" />
 
         <variable
             name="account"
