--- a/app/src/main/res/layout/activity_data_binding.xml
+++ b/app/src/main/res/layout/activity_data_binding.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="data"
-            type="com.yzq.common.data.DataBindingBean" />
+            type="com.yzq.data.DataBindingBean" />
 
     </data>
 
