refactor:重构项目结构，更新依赖关系，调整模块引用

--- a/app/src/main/res/layout/activity_ali_emasactiviy.xml
+++ b/app/src/main/res/layout/activity_ali_emasactiviy.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.activity.AliEMASActivity">
 
     <include
-        android:id="@+id/toolbar"
+        android:id="@+id/included_toolbar"
         layout="@layout/toolbar" />
 
 
